--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				
 				<div id="iframe"></div>
 				<p>
-								This Is A Tool For Getting Embed Code Of A YouTube Video By Pasting YouTube Video Code In The Above Box <br> There Are An Option To Change The Height and Width Of The Video <br> By Default There Are Already Two values. <span>200</span> Is The Height Of The Video And <span>350</span> Is The Width Of The Video You Can Also Adjust It <br> Please Support Me By Sharing This Site To Your Friends Who Needed This 
+								This Is A Tool For Getting Embed link Of A YouTube Video By Pasting YouTube Video Code In The Above Box <br> There Are An Option To Change The Height and Width Of The Video <br> By Default There Are Already Two values. <span>200</span> Is The Height Of The Video And <span>350</span> Is The Width Of The Video You Can Also Adjust It <br> Please Support Me By Sharing This Site To Your Friends Who Needed This 
 				</p>
 </body>
 
